# CRAIC

./: pyproject.toml
craic/descriptors/: steinhardt.py
src/craic/: main.py
src/craic/classification/: gmm.py
src/craic/cli/: interface.py
src/craic/descriptors/: _base.py  steinhardt.py
